# mvcgui

./: .gitignore  CMakeLists.txt  mvcgui.sln
include/mvcgui/core/: global.h  object.h  object_impl.h  objectdefs.h  signal.h  thread.h
include/mvcgui/core/tools/: traits.h
include/mvcgui/tools/: func_traits.h  property.h
mvcgui/: mvcgui.vcxproj  mvcgui.vcxproj.filters
mvcgui/core/: object.cc  object.cpp  object_p.cc  object_p.h  object_p_impl.cc  object_p_impl.h  object_p_p.h  objectdefs.cc  objectdefs.h
